增加作者,故事

--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,1 +1,7 @@
 /* miniprogram/pages/index/index.wxss */
+.home {
+  text-align: center;
+  font-size: 40rpx;
+  margin: 30rpx 0;
+  color: grey;
+}
