增加奖励模块,增加头像获取,删除主页

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,3 +1,12 @@
+<button open-type='getUserInfo' wx:if="{{!userInfo.nick}}" style="margin-top:50rpx;" bindgetuserinfo='handleClickInfo'>
+  获取头像和昵称
+</button>
+<view wx:else>
+  <view style="display:flex;justify-content:center;margin-top:50rpx">
+    <van-image round width="6rem" height="6rem" fit="contain" src="{{userInfo.headurl}}" />
+  </view>
+  <view style='text-align:center'>{{userInfo.nick}}</view>
+</view>
 <view class="box">
   <view data-path='{{item.path}}' bindtap='handleClick' class="game" wx:for="{{list}}" wx:key='index'>
     <van-icon name="{{item.icon}}" size='50' color='{{item.color}}' />
