--- a/miniprogram/pages/private/private.wxml
+++ b/miniprogram/pages/private/private.wxml
@@ -4,7 +4,7 @@
     <van-index-anchor index="{{item.type}}">{{item.type}}</van-index-anchor>
     <van-swipe-cell wx:for="{{item.list}}" wx:key="index" wx:for-item="newItem" right-width="{{ 130 }}">
       <van-cell-group>
-        <van-cell bindtap='handleClickDetail' data-id='{{newItem.id}}' title="{{newItem.name}}" value="15968838382" />
+        <van-cell bindtap='handleClickDetail' data-id='{{newItem.id}}' title="{{newItem.name}}" value="{{newItem.phone}}" />
       </van-cell-group>
       <view slot="right" style="display:flex">
         <view class="editor" bindtap='handleClickAdd' data-detail='{{newItem}}'>修改</view>
